<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Matthew Usnick -->
<!-- Course: CS211D -->
<!-- HW:5 States & Capitals -->
<!-- play.xml -->

<!-- )))))))))))))))))))))))))))))))) play (((((((((((((((((((((((((((((((((((((
     This is the layout file for the Play.java activity.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white"
>
    <!-- Nested Layout for Logo and Small Map Icon -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/logoBannerPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@color/white"
    >
        
        <!-- Logo -->
        <TextView 
            android:id="@+id/logoPlay"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="55dip"
            android:gravity="center"
            android:textSize="20dip"
            android:typeface="monospace"
            android:background="@drawable/logobackground"
            android:textColor="@color/black"
            android:text="@string/logo"
        />  
        
        <!-- Map Image -->
        <ImageView 
            android:id="@+id/mapLogoPlay"
            android:layout_width="83dip"
            android:layout_height="55dip"
            android:src="@drawable/logomap3"
            android:contentDescription="@string/logoDescription"     
        />
    </LinearLayout>
    
    <!-- Blue Dividing Line -->
    <View
        android:id="@+id/linePlay"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/logoBannerPlay"
        android:background="@color/androidBlue"
    />    
    
    <!-- Nested Layout for mode button and score box -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/modeAndScore"
       android:layout_below="@id/linePlay"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="6dip"
       android:orientation="horizontal" 
    >

		    <!-- Toggle Button (State/Capital mode) -->
	        <ToggleButton 
	            android:id="@+id/toggleButton"
	            android:layout_width="125dip"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="6dip"
	            android:onClick="doClick"
	            android:typeface="monospace"
	            android:background="@drawable/custombutton2"
	            android:textColor="@color/black"        
	            android:textSize="16dip"
	            android:textOn="@string/toggleOn"
	            android:textOff="@string/toggleOff"
	        />  
	    
            <!-- Nested Layout for Score Box content -->
            <LinearLayout 
               xmlns:android="http://schemas.android.com/apk/res/android"
	           android:id="@+id/scoreBoxLayout"
	           android:layout_width="125dip"
	           android:layout_height="fill_parent"
	           android:orientation="vertical" 
	           android:background="@drawable/scorearea"
            >   
                <!-- Score Title -->
	            <TextView 
	                android:id="@+id/scoreTitle"
	                android:layout_width="125dip"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:textSize="12dip"
	                android:typeface="monospace"
	                android:layout_marginTop="4dip"
	                android:textColor="@color/black"
	                android:text="@string/score_Title"
	            />  
	     
	            <!-- Score Text -->
		        <TextView 
			        android:id="@+id/scoreField"
			        android:layout_width="125dip"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:textSize="18dip"
			        android:textStyle="bold"
			        android:typeface="monospace"
			        android:textColor="@color/black"
			        android:text="@string/score_Init"
			    />  
	        </LinearLayout>

    </LinearLayout>
      
    <!-- Map Image -->
    <ImageView 
        android:id="@+id/questionImage"
        android:layout_below="@id/modeAndScore"
        android:layout_width="250dip"
        android:layout_height="165dip"
        android:layout_marginTop="18dip"
        android:layout_centerHorizontal="true"        
        android:src="@drawable/blurmap"
        android:contentDescription="@string/qustionImageDescription"    
    />
 
    <!-- Question Text -->
    <TextView 
        android:id="@+id/currentText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionImage"
        android:gravity="center"
        android:textSize="26dip"
        android:typeface="monospace"
        android:padding="5dip"
        android:textColor="@color/black"
        android:text=""
    />  
 
    <!-- Nested Layout for AutoCompleteTextView and Submit Button -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginBottom="6dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
    >
        <!-- Answer Field -->
	    <AutoCompleteTextView 
	        android:id="@+id/answerField"
	        android:layout_width="250dip"
	        android:layout_height="40dip"
	        android:layout_marginBottom="6dip"
	        android:singleLine="true"
	        android:textSize="20dip"
	        android:gravity="center"
	        android:inputType="textMultiLine"
	        android:background="@drawable/outline_et"
	        android:textColor="@color/black"
	        android:hint=""
	    />  
	    
	     <!-- Submit Button -->
	    <Button 
	        android:id="@+id/submitButton"
	        android:layout_width="250dip"
	        android:layout_height="60dip"
	        android:layout_below="@id/answerField"
	        android:onClick="doClick"
	        android:typeface="monospace"
	        android:background="@drawable/custombutton"
	        android:textColor="@color/black"
	        android:textSize="20dip"
	        android:text="@string/submitButton"
	    />   
  
    </RelativeLayout>   
</RelativeLayout>